# paddle_decoder_cross_platform

./: .gitignore  AUDIO_FIX.md  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_MACOS_CROSS.md  BUILD_SUCCESS_SUMMARY.txt  BUILD_WINDOWS.md  CHARACTERS_NUMBERS_PRACTICE_ADDED.md  CROSS_COMPILE.md  CUMULATIVE_SESSIONS_FIXED.md  Cargo.toml  GITHUB_AUTH_FIX.md  GITIGNORE_CREATED.md  GIT_CONFIGURED.md  GIT_SETUP_GUIDE.md  IAMBIC_SQUEEZE_KEYING_ADDED.md  INO_README.md  LISTENING_MODE_GUIDE.md  LISTENING_PRACTICE_SUMMARY.md  MACOS_CROSSCOMPILE_QUICKSTART.txt  MORSE_INPUT_DISPLAY_ADDED.md  MSVC_FIX_SUMMARY.md  PADDLES_SWITCHED_BEHAVIOR_ONLY.md  PADDLES_SWITCHED_FINAL.md  PADDLE_STATUS_CORRECTED.md  PADDLE_SWAP_FIXED.md  PROJECT_COMPLETE.md  PUSH_READY.md  QUICKSTART.md  QUICK_REFERENCE.md  RANDOM_BLOCKS_GUIDE.md  RANDOM_BLOCKS_NUMBERS_FIXED.md  RANDOM_BLOCKS_SUMMARY.md  README.md  RUST_UPDATE_GUIDE.md  TRAINING_MODE_ADDED.md  TRAINING_START_BUTTON_ADDED.md  TRAINING_WINDOW_ADDED.md  TRAINING_WINDOW_COMPACT_UI.md  WINDOW_SIZE_FIXED.md  (+16 more)
.cargo/: config.toml
src/: cw_academy_training.rs  main.rs  morse_player.rs
